[metadata]
name = libmultilabel
version = 0.8.0
author = LibMultiLabel Team
license = MIT License
license_file = LICENSE
description = A library for multi-class and multi-label classification
long_description = See documentation here: https://www.csie.ntu.edu.tw/~cjlin/libmultilabel
url = https://github.com/ASUS-AICS/LibMultiLabel
project_urls =
    Bug Tracker = https://github.com/ASUS-AICS/LibMultiLabel/issues
    Documentation = https://www.csie.ntu.edu.tw/~cjlin/libmultilabel
    Source Code = https://github.com/ASUS-AICS/LibMultiLabel/
classifiers =
    Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1
    Environment :: GPU :: NVIDIA CUDA :: 11.8
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    liblinear-multicore>=2.49.0
    numba
    pandas>1.3.0
    PyYAML
    scikit-learn
    scipy<1.14.0
    tqdm
    psutil

python_requires = >=3.10

[options.extras_require]
nn =
    lightning
    nltk
    torch<=2.3
    torchmetrics==0.10.3
    torchtext
    transformers<=4.51.3


[options.packages.find]
exclude =
    docs
